syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ipAddress = 3;
  string userAgent = 4;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string userId = 3;
  string refreshTokenId = 4;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string userId = 1;
  bool valid = 2;
}

message RefreshRequest {
  string refreshToken = 1;
  string refreshTokenId = 2;
}

message RefreshResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
